--- a/scss/_section-portfolio.scss
+++ b/scss/_section-portfolio.scss
@@ -9,6 +9,7 @@
 .portfolio-preview {
   display: block;
   position: relative;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
 
   &__img {
     border-radius: 10px;
