--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
   line-height: 1.625;
   color: #2E2F22;
   height: auto;
-  background-color: #E5E5E5;
+  background-color: #fff;
 }
 
 h1,
@@ -79,8 +79,19 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
-.btn--secondary {
-  border-radius: 0;
+.btn:hover {
+  background-color: #cacbb8;
+  border-color: #cacbb8;
+  color: #fff;
+}
+.btn:focus {
+  color: #fff;
+  background-color: #cacbb8;
+}
+.btn:active {
+  background-color: #9ea17c;
+  border-color: #9ea17c;
+  color: #fff;
 }
 
 .container {
@@ -196,12 +207,17 @@ a {
 }
 
 .header {
-  background-color: #E5E5E5;
-  background: url("../img/fon-header_1.jpg");
+  background-color: #fff;
   background-size: cover;
   height: 100vh;
   padding-top: 4px;
   margin-bottom: 83px;
+}
+.header--bg-home {
+  background: url("../img/fon-header_1.jpg");
+}
+.header--bg-article {
+  background: url("../img/fon-header_1.jpg");
 }
 
 .nav {
@@ -374,6 +390,8 @@ a {
 .portfolio-preview {
   display: block;
   position: relative;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
 .portfolio-preview__img {
   border-radius: 10px;
@@ -398,6 +416,112 @@ a {
   font-size: 18px;
   margin-bottom: 17px;
   line-height: 1.555555;
+}
+
+.section-feedback {
+  margin-bottom: 81px;
+}
+
+.form-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: url("../img/fon_form.jpg") no-repeat;
+  min-height: 637px;
+  padding-top: 53px;
+  padding-left: 71px;
+  padding-right: 71px;
+  padding-bottom: 62px;
+}
+.form-contact__field {
+  width: 50%;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.form-contact__field--big {
+  width: 100%;
+}
+.form-contact__field:hover .form-contact__input {
+  -webkit-box-shadow: 0 0 10px 2px #000;
+          box-shadow: 0 0 10px 2px #000;
+}
+.form-contact__caption {
+  display: block;
+  font-family: "Spectral SC", "Times New Roman", serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+.form-contact__input {
+  width: 100%;
+  padding: 20px;
+  opacity: 0.4;
+  border: 1px solid #000;
+  outline: none;
+}
+.form-contact__input:focus {
+  outline: 1px solid #000;
+}
+.form-contact__input:active {
+  outline: 4px solid #000;
+}
+.form-contact__input--message {
+  height: 293px;
+  resize: none;
+}
+
+.footer {
+  padding-top: 65px;
+  padding-bottom: 90px;
+  background-color: #D7D1C9;
+}
+
+.social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style: none;
+  width: 630px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.social-list__item {
+  outline: none;
+}
+.social-list__link {
+  display: box;
+  padding: 8px 12px;
+  color: #2E2F22;
+  font-size: 18px;
+  outline: none;
+}
+.social-list__link:hover {
+  color: #fff;
+  text-shadow: 0 0 3px #2E2F22;
+}
+.social-list__link:focus {
+  color: #fff;
+}
+.social-list__link:active {
+  color: #2E2F22;
+  text-shadow: 0 0 2px #2E2F22;
 }
 
 /*# sourceMappingURL=main.css.map */
