--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -1,21 +1,3 @@
-@mixin hover-focus-active ($color-text, $color-fon) {
-  &:hover {
-    color: $color-fon;
-    background-color: $color-text;
-    border-color: $color-fon;
-    box-shadow: 0 0 15px $color-fon;
-  }
-  
-  &:focus {
-    background-color: lighten($color-fon, 25);
-    box-shadow: 0 0 15px darken($color-fon, 25);
-  }
-
-  &:active {
-    background-color: darken($color-fon, 15);
-  }
-}
-
 %controls-transition {
   -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,opacity .15s ease-in-out,-webkit-box-shadow .15s ease-in-out, visibility .15s ease-in-out;
     -o-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,opacity .15s ease-in-out, visibility .15s ease-in-out;
@@ -66,7 +48,21 @@ a {
     margin-right: auto;
   }
 
-  &--secondary {
-    border-radius: 0;
+  &:hover {
+    background-color: lighten($font-color-primary, 60);
+    border-color: lighten($font-color-primary, 60);
+    color: $font-color-secondary;
+   
+  }
+
+  &:focus {
+    color: $font-color-secondary;
+    background-color: lighten($font-color-primary, 60);
+  }
+
+  &:active {
+    background-color: lighten($font-color-primary, 40);
+    border-color: lighten($font-color-primary, 40);
+    color: $font-color-secondary;
   }
 }
