--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -18,7 +18,7 @@
   }
 
   &__link {
-    display: box;
+    display: block; 
     padding: 8px 12px;
     color: $font-color-primary;
     font-size: $h4-font-size;
