--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,16 +1,16 @@
 .header { 
-  background-color:  $bg-color-primary;
-  background-size: cover;
   height: 100vh;
   padding-top: 4px;
-  margin-bottom: 83px;
+  margin-bottom: 85px;
 
   &--bg-home {
-    background: url('../img/fon-header_1.jpg');
+    background-image: url('../img/fon-header_1.jpg');
+    background-size: cover;
   }
 
   &--bg-article {
-    background: url('../img/fon-header_1.jpg');
+    background-image: url('../img/page-article/fon-header_2.jpg');
+    background-size: cover;
   }
 }
 
