--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,8 +16,9 @@ $h1-font-size: 36px;
 $h2-font-size: 24px;
 $h3-font-size: 20px;
 $h4-font-size: 18px;
-$big-font-size: 36px;
-$small-font-size: 14px;
+$l-font-size: 36px;
+$m-font-size: 30px;
+$s-font-size: 14px;
 
 $bg-color-primary: $COLOR_WHITE;
 $bg-color-secondary: $grey;
