--- a/scss/_section-about.scss
+++ b/scss/_section-about.scss
@@ -10,9 +10,10 @@
 }
 
 .info {
-/*  display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;*/
+  justify-content: space-between;
+  height: 100%;
   padding-top: 42px;
   
   &__text {
@@ -32,7 +33,7 @@
 
   &__text {
     font-style: italic;
-    font-size: $big-font-size;
+    font-size: $m-font-size;
     line-height: 1.333333;
   }
 }
