--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -9,10 +9,12 @@
   padding-left: 10px;
   padding-right: 10px;
   min-height: 1px;
+  flex: 0 0 auto;
 }
 
 .col-1 {
-  width: 8.3333333%;
+  flex-basis: 8.333333%;
+  max-width: 8.3333333%;
 }
 
 .col-2 {
