--- a/scss/_section-portfolio.scss
+++ b/scss/_section-portfolio.scss
@@ -1,14 +1,24 @@
 .section-portfolio {
-  margin-bottom: 85px;
+  padding-bottom: 85px;
 }
 
-.list-portfolio {
+.portfolio {
   margin-bottom: 104px;
 }
 
 .portfolio-preview {
   display: block;
   position: relative;
+  border-radius: 10px;
+  outline: none;
+
+    &:hover {
+      box-shadow: 0 0 5px black;
+    }
+
+    &:focus {
+      box-shadow: 0 0 5px black;
+    }
 
   &__img {
     border-radius: 10px;
@@ -28,7 +38,7 @@
     }
   }
 
-  &__heading {
+  &__header {
     font-family: $font-family-secondary;
     font-size: $h3-font-size;
     margin-bottom: 44px;
